src/style.css
/*css reset*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*css reset*/
  
/*global*/
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
:root {
	--system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
	box-sizing: border-box;
	--primary-color: hsl(13, 81%, 15%);
	--secondary-color: hsl(32, 98%, 83%);
	--tertiary-color: hsl(28, 7%, 55%);
}
:root>*{
	font-family: var(--system-ui);
}
h2,h3,h1{
	font-family: poppins, var(--system-ui);
}
body {
	height: 100vh;
	display: grid;
	grid-template-columns: 1fr 4fr;
	grid-template-rows: 1fr 10fr 0.6fr;
}
button{
	transition : filter 60ms linear;
    cursor: pointer;
}
button:hover{
	filter: brightness(.9);
}
button:active{
	filter: brightness(.95);
}
[contenteditable]:focus {
	outline: 0px solid transparent;
	border: solid 0.5px;
	border-radius: 10px;
	padding: 0 2px;
	display: flex;
	align-items: center;
}
/*global*/

/*header*/
header{
	justify-content: space-between;
	display: flex;
	align-items: center;
    padding: 10px 30px;
    font-size: 3rem;
    background-color: var(--secondary-color);
    color: var(--primary-color);
	grid-column: 1 / span 4;
	user-select: none;
}
header button{
	display: none;
}
/*header*/
/*content*/
#content{
	padding: 20px 60px;
	display: flex;
	flex-direction: column;
	position: relative;
	gap: 10px;
	overflow: auto;
}
#content h2{
	margin-bottom: 10px;
	font-size: 2rem;
	font-weight: bold;
	color: var(--primary-color);
}
#content>button,
.add-task-form button{
	background-color: var(--tertiary-color);
	color: hsl(0, 0%, 100%);
	border: none;
	padding: 15px;
	border-radius: 10px;
	font-size: 1.1rem;
}
.task{
	position: relative;
	display: flex;
	flex-wrap: wrap;
	background-color: rgb(233, 233, 233);
	border-radius: 10px;
	padding: 50px 20px 20px;
	gap: 20px;
}
.task h3{
	top: 12px;
	position: absolute;
	min-height: 30px;
	font-size: 1.5rem;
	color: var(--primary-color);
}
.task button{
	position: absolute;
	right: 10px;
	top: 10px;
	border-radius: 50%;
	border: none;
	background: transparent;
}
.task div{
	flex-direction: column;
	flex: 1;
	display: flex;
	gap: 10px;
}
.task div div{
	flex: 1;
	display: flex;
	flex-direction: column;
	gap: 10px;
}
.task input,
.task textarea,
.task select{
	padding: 0 6px;
	border: none;
	border-radius: 4px;
	height: 40px;
}
.task textarea{
	flex: 1;
	padding-top: 10px;
	height: 30px;
	resize:none;
}
.add-task-form input{
	font-size: 1rem;
	padding: 15px;
	border-radius: 4px;
	border: 1px solid gray;
}
.add-task-form div{
	display: flex;
	gap: 10px;
	flex-direction: row;
}
.add-task-form div button{
	flex: 1;
}
.add-task-button{
	margin-top: 10px;
}
/*content*/
/*aside*/
aside{
	grid-row: 2 / span3;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    padding: 20px;
    background-color: var(--tertiary-color);
	max-width: 250px;
	overflow: auto;
}
aside .project{
	background-color: hsl(30, 9%, 60%);
	color: white;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	min-height: 40px;
}
aside .project:hover{
	filter: brightness(1.1);
}
aside button{
    border: none;
    padding: 10px;
    font-size: 1rem;
    font-weight: normal;
    width: 100%;
    border-radius: 10px;
}
aside h2{
    font-size: 1.8rem;
	font-family: poppins;
	color: white;
	margin: 20px 0;
}
.add-project-form,
.add-task-form{
	width: 100%;
	display: flex;
	flex-direction: column;
	gap: 10px;
}
.add-project-form div{
	display: flex;
	gap: 10px;
}
.add-project-form button{
	background-color: var(--secondary-color);
	color: var(--primary-color);
	padding: 5px;
}
.add-project-form input{
	padding: 5px;
	border: none;
	border-radius: 4px;
}
.add-project-btn{
	color: var(--primary-color);
	background-color: var(--secondary-color);
}
.active-project-btn{
	filter: brightness(1.1);
	border: solid;
	color: black;
}
/*aside*/

/*footer*/
footer{
	font-size: clamp(1rem, 0.8500rem + 0.6667vw, 1.2rem);
	color: var(--tertiary-color);
	width: 100%;
	grid-row: 3;
}
footer a{
	margin-left: 4px;
    color: inherit;
}
footer p{
	text-align: center;
}
.fa-github{
	scale: 1.2;
    transition: transform 0.3s ease-in-out;
	margin-left: 5px;
}
.fa-github:hover{
    transform: rotate(360deg) scale(1.2);
}
/*footer*/
/*mobile*/
@media (max-width: 550px) {
	body, html {
		overflow-x: hidden;
		font-size: 15px;
	}
	header{
		font-size: 3rem;
		z-index: 5;
	}
	header button{
		display: inline;
		border: none;
		border-radius: 4px;
		font-size: 2rem;
		width: 40px;
	}
	body {
		position: relative;
		grid-template-columns: 1fr;
	}
	aside {
		position: absolute;
		height: 82vh;
		top: 0;
		transition: all 0.2s;
		right: 0;
		z-index: 4;
 		transform: translateX(52vw);
		width: 40vw;
		padding-bottom: 40px;
	}
	.active-aside {
		transform: translateX(0);
	}
	#content{
		padding: 30px;
	}
	.task {
		flex-direction: column;
		gap: 10px;
	}
	.task div{
		gap: 6px;
	}
	.task>div:first-of-type{
		flex: auto;
		height: 150px;	
	}
	.task div:last-of-type{
		flex-direction: row;
	}
	.task div:last-of-type div{
		flex-direction: column;
	}
	footer{
		background-color: hsl(0, 0%, 100%);
		z-index: 5;
		display: flex;
		align-items: center;
		justify-content: center;
	}
}
/*mobile*/

